# ChangeLog for app-text/hunspell
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/hunspell/ChangeLog,v 1.35 2008/02/10 19:17:26 philantrop Exp $

*hunspell-1.2.2_beta (10 Feb 2008)

  10 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org>
  +files/hunspell-1.2.2b-renameexes.patch, +hunspell-1.2.2_beta.ebuild:
  Version bump to 1.2.2_beta as per bug 200185.

  25 Dec 2007; Jeroen Roovers <jer@gentoo.org> hunspell-1.1.9.ebuild:
  Marked ~hppa for armin76. Fixed quoting issues.

  12 Dec 2007; Raúl Porcel <armin76@gentoo.org> hunspell-1.1.9.ebuild:
  Add ~ia64

  27 Nov 2007; Markus Rothe <corsair@gentoo.org> hunspell-1.1.9.ebuild:
  Added ~ppc64

  16 Nov 2007; Steve Dibb <beandog@gentoo.org> hunspell-1.1.9.ebuild:
  amd64 stable, bug 182360

  22 Oct 2007; Ferris McCormick <fmccor@gentoo.org> hunspell-1.1.9.ebuild:
  Sparc stable --- Bug #182360 --- tests pass and works with en_US.

  22 Oct 2007; Markus Meier <maekke@gentoo.org> hunspell-1.1.9.ebuild:
  x86 stable, bug #182360

  21 Oct 2007; nixnut <nixnut@gentoo.org> hunspell-1.1.9.ebuild:
  Stable on ppc wrt bug 182360

*hunspell-1.1.9 (17 Aug 2007)

  17 Aug 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +hunspell-1.1.9.ebuild:
  Version bump as per bug 187869.

  21 May 2007; Kevin F. Quinn <kevquinn@gentoo.org> hunspell-1.1.5.ebuild:
  Yet more brokenness in the install (bug #179285)

  21 May 2007; Kevin F. Quinn <kevquinn@gentoo.org> hunspell-1.1.5.ebuild:
  Fixup wobbly header installation (bug #179285).

*hunspell-1.1.5 (20 May 2007)

  20 May 2007; Kevin F. Quinn <kevquinn@gentoo.org>
  +files/hunspell-1.1.5-renameexes.patch, +hunspell-1.1.5.ebuild:
  Version bump; thanks to Andra's (bug #179192)

  04 Mar 2007; Marius Mauch <genone@gentoo.org> hunspell-1.1.3.ebuild,
  hunspell-1.1.4.ebuild, hunspell-1.1.4-r1.ebuild, hunspell-1.1.4-r2.ebuild:
  Replacing einfo with elog
