@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>app-dicts</herd>
-<maintainer><email>kevquinn@gentoo.org</email></maintainer>
+	<herd>app-dicts</herd>
 </pkgmetadata>
