@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>web-apps</herd>
-<maintainer>
-  <email>kevquinn@gentoo.org</email>
-  <name>Kevin F. Quinn</name>
-</maintainer>
+	<herd>web-apps</herd>
 </pkgmetadata>
